--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/common": "5.2.10",
     "@angular/compiler": "5.2.10",
     "@angular/compiler-cli": "5.2.10",
-    "@angular/core": "5.2.10",
+    "@angular/core": "^5.2.10",
     "@angular/forms": "5.2.10",
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
@@ -35,7 +35,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
